<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="18dp"
    android:background="@color/pale_grey"
    tools:context=".EnviarFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_back" />

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/revisar_y_enviar" />
            </TableRow>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_card1_table"
                android:hapticFeedbackEnabled="false"
                android:orientation="vertical"
                android:padding="14dp"
                android:paddingTop="8dp"
                android:paddingLeft="40dp"
                android:elevation="5dp"
                android:layout_margin="3dp"
                android:layout_marginBottom="50dp">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:src="@drawable/account"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:gravity="center_horizontal"
                    android:src="@drawable/ic_modify"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nameac2"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:fontFamily="@font/montserrat_bold"
                    android:layout_marginTop="10dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView4"/>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="@color/warm_grey"
                    android:textSize="12sp"
                    android:fontFamily="@font/montserrat_medium"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    app:layout_constraintLeft_toLeftOf="parent"/>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_20_00"
                    android:gravity="center"
                    android:layout_marginTop="12dp"
                    android:textColor="@color/white"
                    android:padding="5dp"
                    android:paddingBottom="3dp"
                    android:textSize="18sp"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/background_card2_money"
                    app:layout_constraintLeft_toRightOf="@+id/textView2"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/layout"/>

                <LinearLayout
                    android:id="@+id/layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mensaje"
                        android:fontFamily="@font/montserrat_medium"
                        android:textColor="@color/warm_grey"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/este_es_el_dinero_de_la_entradas"
                        android:textColor="#666666"
                        android:fontFamily="@font/montserrat_medium"
                        android:textSize="14sp"/>
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:elevation="5dp"
                android:padding="15dp"
                android:layout_margin="4dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/background_card1_table">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="10dp"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tipo_de_pago"
                        android:textSize="14sp"
                        android:fontFamily="@font/montserrat_semi_bold"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"/>

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/personal"
                        android:textSize="16sp"
                        android:fontFamily="@font/montserrat_semi_bold"
                        android:textColor="#666666"
                        app:layout_constraintRight_toLeftOf="@id/imageView11"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <ImageView
                        android:id="@+id/imageView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_go_ahead"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <ImageView
                        android:id="@+id/imageView10"
                        android:layout_height="20dp"
                        android:layout_width="match_parent"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/divider"
                        android:layerType="software"
                        app:layout_constraintTop_toBottomOf="@+id/textView13"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_bbva"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bbva"
                        android:textSize="16sp"
                        android:fontFamily="@font/montserrat_semi_bold"
                        android:textColor="@color/black"
                        android:layout_marginLeft="16dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toRightOf="@id/imageView12"/>

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/number"
                        android:textSize="14sp"
                        android:fontFamily="@font/montserrat_medium"
                        android:layout_marginLeft="16dp"
                        android:textColor="@color/warm_grey"
                        app:layout_constraintLeft_toRightOf="@id/imageView12"
                        app:layout_constraintTop_toBottomOf="@+id/textView16"/>

                    <ImageView
                        android:id="@+id/imageView13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_go_ahead"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <ImageView
                        android:id="@+id/imageView9"
                        android:layout_height="20dp"
                        android:layout_width="match_parent"
                        android:background="@drawable/divider"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView17" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="10dp"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tarifas_por_transacci_n"
                        android:textSize="14sp"
                        android:fontFamily="@font/montserrat_semi_bold"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"/>

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_0_00"
                        android:textSize="16sp"
                        android:fontFamily="@font/montserrat_semi_bold"
                        android:textColor="#666666"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <ImageView
                        android:id="@+id/iv10"
                        android:layout_height="20dp"
                        android:layout_width="match_parent"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/divider"
                        android:layerType="software"
                        app:layout_constraintTop_toBottomOf="@+id/textView1"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:id="@+id/textView19"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/t_pagas"
                        android:textSize="14sp"
                        android:fontFamily="@font/montserrat_semi_bold"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"/>

                    <TextView
                        android:id="@+id/textView21"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_20_00"
                        android:textSize="20sp"
                        android:fontFamily="@font/montserrat_semi_bold"
                        android:textColor="@color/green_blue"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_card2_bt"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:fontFamily="@font/montserrat_bold"
                android:layout_marginTop="20dp"
                android:text="@string/enviar_ahora" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>